# fa-research-cpp

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
include/fa/: attention.hpp  mask.hpp  math.hpp  tensor.hpp  types.hpp
src/: attention_ref.cpp  mask.cpp
src/common/: checks.cpp  math.cpp  random.cpp
src/cpu/: tensor.cpp
tests/: test_attention_causal.cpp  test_attention_dropout.cpp  test_attention_mask.cpp  test_attention_ref.cpp  test_attention_temperature.cpp  test_tensor.cpp  test_utils.cpp
